Front end works with Reddit

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@ source: availableTags
                         <input type="text" placeholder="Enter CS Class" id="tags">
                     </div>
                 <div class="large-4 small-3 columns">
-                    <a href="#" class="button small alert">Search</a>
+                    <input class="button small alert" type="submit" onClick='submitDetailsForm()'></input>
                 </div>
             </div>
         </li>
@@ -64,28 +64,13 @@ document.write('<script src=' +
 '.js><\/script>')
 </script>
 <script src="../static/foundation/js/foundation.min.js"></script>
-<!--
-<script src="js/foundation/foundation.js"></script>
-<script src="js/foundation/foundation.alerts.js"></script>
-<script src="js/foundation/foundation.clearing.js"></script>
-<script src="js/foundation/foundation.cookie.js"></script>
-<script src="js/foundation/foundation.dropdown.js"></script>
-<script src="js/foundation/foundation.forms.js"></script>
-<script src="js/foundation/foundation.joyride.js"></script>
-<script src="js/foundation/foundation.magellan.js"></script>
-<script src="js/foundation/foundation.orbit.js"></script>
-<script src="js/foundation/foundation.placeholder.js"></script>
-<script src="js/foundation/foundation.reveal.js"></script>
-<script src="js/foundation/foundation.section.js"></script>
-<script src="js/foundation/foundation.tooltips.js"></script>
-<script src="js/foundation/foundation.topbar.js"></script>
--->
 <script>
 $(document).foundation();
 </script>
+<script src="../static/js/code.js"></script>
 </body>
 </html>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
 		<section>
-	</body>
+	</section>
 </html>
