Changed CSS on class

--- a/templates/class.html
+++ b/templates/class.html
@@ -160,22 +160,22 @@
                     <div class="panel-group">
                         <div class="panel panel-default">
                              {% if query == "CS 225" %}
-                            <div class="panel-heading">Sam Davis</div>
-                        <div class="panel-body" style="background: lightgreen;">This course is very informative and I learnt alot. The professors are very nice and helpful</div>
+                            <div class="panel-heading">Pro</div>
+                        <div class="panel-body" style="background: lightgreen;">•	This course is very informative and I learnt alot. The professors are very nice and helpful<br><br>•	Lectures are clear and concise while still being in-depth, most of the course content is laid-out and easy to understand. You will have to sit down and think about the concepts but they're not bad at all. Professor Heeren is respectful and dedicates a lot of time to improve the course as a whole. Generous with extra credit, so DO IT.<br><br>•	The TAs & piazza will be your main source of help with questions on material/mps/labs. Though the MPs and material may be difficult, it is worth it. Plus, there's extra credit. Lectures are also online but on occasion slides can be glitchy. Work hard and it'll pay off. </div>
                             <br>
-                      <div class="panel-heading">Tom Wilson</div>
-                        <div class="panel-body" style="background: indianred;">I found the class to be very hard. The professor isn't very clear in the class</div>
+                      <div class="panel-heading">Con</div>
+                        <div class="panel-body" style="background: indianred;">•	I found the class to be very hard. The professor isn't very clear in the class.<br><br>•	I did not enjoy my experience in this class at all. Professor Heeren attempts (unsuccessfully so) to keep lectures interesting through jokes tangents that actually distract.</div>
                          {% elif query == "CS 241" %}
-                            <div class="panel-heading">Shiv Goyal</div>
-                        <div class="panel-body" style="background: indianred;">The course is too hard and I'm not able to understand many concepts</div>
+                            <div class="panel-heading">Pro</div>
+                        <div class="panel-body" style="background: lightgreen;">•	This professor and this class inspired me to transfer into Computer Science.</div>
                             <br>
-                      <div class="panel-heading">Nick Allen</div>
-                        <div class="panel-body" style="background: indianred;">The Professor goes too quickly in the class and the quizzes are too hard.</div>
+                      <div class="panel-heading">Con</div>
+                        <div class="panel-body" style="background: indianred;">•	The main problem with this class is that it is organized very poorly. Professor is not helpful at all when it comes to questions about assignments. Also, lectures are dull and lack structure. The TA's work incredibly hard to create and run the MP's. But I wish the professor was more helpful. Only managed to do okay by studying a ton before exams.<br><br>•	Contents are presented fragmented in the class. Feedbacks from MPs are weeks later when you already forgot what you write. The worst class I had on this campus.<br><br>•	NO PPT, pointless lecture. Need old PPT to follow lecture. I did not drop the class because first 8 week (drop deadline) only 1 MP due, BUT the rest 8 weeks have 4 MPs. At the last few weeks HE gives some random "50 Questions HW" to be done in one week with another MP due, which takes 4% of the total grade AND IS NOT *** IN SYLLABUS AT ALL.<br><br>•	Every MP was broken, weekly quizzes were too hard... the quality of the course would have been acceptable if it was the first time this course was ran.</div>
                             {% else %}
-                            <div class="panel-heading">Ram Prasad</div>
+                            <div class="panel-heading">Pro</div>
                         <div class="panel-body" style="background: lightgreen;">One of the best courses at UIUC. Must take.</div>
                             <br>
-                      <div class="panel-heading">Ryan Brown</div>
+                      <div class="panel-heading">Con</div>
                         <div class="panel-body" style="background: indianred;">Course gets tricky at many instances and the class is fast paced.</div>
                              {% endif %}
                 </div>
